--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.0.22",
+    "@react-stately/data": "^3.10.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.0",
     "next": "13.4.16",
     "postcss": "8.4.28",
