--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-stately/data": "^3.10.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
+    "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "framer-motion": "^10.16.0",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
   }
 }
