--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-icons": "^4.10.1",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.40.0"
   }
 }
