--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "framer-motion": "^10.16.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
